<resources>
    <string name="app_name">tway rider</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="continue_text">Continue</string>
    <string name="register_text">Creating Account</string>
    <string name="first_name">First Name</string>
    <string name="address">Address</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="mail">Mail address</string>

    <string name="menu_home">Home</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_profil">Profil</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_require">Permission Location required</string>
    <string name="drivers_not_found">Driver not Found</string>
    <string name="key_not_found">key driver not found</string>
    <string name="welcome">Good day</string>
    <string name="choose_a_saved_place">Choose a saved place</string>
    <string name="city_name_not_found">City name not found</string>
    <string name="title_activity_request_driver">Map</string>
    <string name="pay_by_cash">Pay by cash</string>
    <string name="confirm">Confırm</string>
    <string name="confirm_pickup_spot">Confirm pickup spot</string>
    <string name="address_demo">JacksonVille 3425</string>
    <string name="confirm_pickup">Confırm Pıckup</string>
    <string name="meet_driver_here">Meet driver here</string>
    <string name="finding_your_ride">Finding your ride...</string>
    <string name="token_not_found">Token not found</string>
    <string name="send_request_driver_failed">Request driver failed</string>
    <string name="no_driver_accept">Thare are no driver that accept your request</string>
    <string name="trip_not_found">Trip not found with key</string>
    <string name="carType">Mercedes-Benz</string>
    <string name="car_number">34 ABC 25</string>
    <string name="driver_name_exp">Talha Bayhan</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>


</resources>